--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "next": "^12.1.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
-    "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "next build",
+    "dev" : "next dev",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
