--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "build": "next build",
-    "dev" : "next dev",
+    "dev": "next dev",
     "start": "next start"
   },
   "eslintConfig": {
